--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         </div>
     </div>
 
-    <script src="./script-common.js"></script>
-    <script src="./script-check.js"></script>
-    <script src="./script-save.js"></script>
-    <script src="./script-user.js"></script>
+    <script src="script-common.js"></script>
+    <script src="script-check.js"></script>
+    <script src="script-save.js"></script>
+    <script src="script-user.js"></script>
 
     <script>
         // ฟังก์ชันสำหรับสลับหน้าจอ
